# agent-co-op-mcp

./: LICENSE  README.md  pyproject.toml
.claude/skills/agent-handoff/: SKILL.md
.cursor/skills/agent-handoff/: SKILL.md
.github/skills/agent-handoff/: SKILL.md
.github/workflows/: ci.yml
docs/: design-alignment.md  hooks.md  roadmap.md
docs/workflow/: README.md  multi-agent-loop.md
examples/: CURRENT_HANDOFF.example.md  handoff-state-v2.example.json  handoff-state.example.json  project.example.json  verification-queue.example.json
scripts/: check-reference-guard.sh
src/agent_co_op/: __init__.py  cli.py  defaults.json  git_snapshot.py  handoff-state.schema.json  handoff.py  handoff_context.py  handoff_state.py  manifest.py  mcp_server.py  mcp_support.py  project-manifest.schema.json  project_store.py  projects.py  prompt_builder.py  routing.py  verification-queue.schema.json  verification.py  workspace_paths.py
src/agent_co_op/cli/: __init__.py  commands.py  parser.py
src/agent_co_op/handoff/: __init__.py  core.py  history.py  io.py  paths.py  render.py
tests/: git_helpers.py  test_cli.py  test_git_snapshot.py  test_handoff.py  test_handoff_context.py  test_handoff_history.py  test_handoff_restore.py  test_handoff_status.py  test_handoff_update.py  test_handoff_v2_render.py  test_manifest.py  test_mcp_integration.py  test_mcp_support.py  test_mcp_workspace.py  test_pickup.py  test_projects.py  test_routing.py  test_transcript_fixtures.py  test_verification.py
tests/fixtures/transcripts/: README.md  claude-session.example.jsonl  (+1 more)
